  * Fix dpkg-source to not list Debian packaging files as modified
    upstream files in Format "1.0" when unpacking to a non-standard
    directory.
  * Apply patch from Colin Watson to let dpkg-buildflags return -O3
    instead of -O2 when building ppc64 packages on Ubuntu. Closes: #612472
  * Add new function get_control_path() to Dpkg::Path, it wraps dpkg-query
    --control-path.

  [ Jonathan Nieder ]
  * Remove support for use of synchronous sync(2), due to its pernicious
    side-effects and to ease maintenance.
  * Clarify that an up-to-date dpkg only needs to be unpacked for
    dpkg-maintscript-helper to work.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Portuguese (Miguel Figueiredo).
  * Spanish (Javier Fernandez-Sanguino).
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino).

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.10) unstable; urgency=low

  * Do not segfault on “update-alternatives --auto” when the link group only
    has alternatives which are dangling symlinks. Closes: #611545

 -- Guillem Jover <guillem@debian.org>  Sun, 30 Jan 2011 20:28:27 +0100

dpkg (1.15.8.9) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Drop Breaks on konqueror to avoid some lenny -> squeeze upgrade
    problems. It was only needed to ensure install-info is installed
    even for partial upgrades. Closes: #610991
  * Do the same for all emacs/jed packages. For jed, the breaks has been
    rendered useless as the maintainers dropped the install-info dependencies
    anyway.

  [ Updated dpkg translations ]
  * Remove space before "…" in several Catalan strings (Jordi Mallach).
  * Romanian (Stan Ioan-Eugen).
