@@ -62,9 +62,9 @@ other binary packages.
 Per-system overriding shared library dependency information.
 \fIarch\fR is the architecture of the current system (obtained by
 .BR "dpkg-architecture -qDEB_HOST_ARCH" ).
-.IP \fIadmindir\fR/info/\fIpackage\fR.symbols
+.IP File returned by dpkg-query --control-path \fIpackage\fR symbols
 Package-provided shared library dependency information.
-Unless overridden, \fIadmindir\fR is /var/lib/dpkg.
+Unless overridden by --admindir, those files are located in /var/lib/dpkg.
 .P 
 While scanning the symbols used by all binaries,
 .B dpkg\-shlibdeps
@@ -96,9 +96,9 @@ Shared library information generated by the current build process that also invo
 They are only used if the library is found in a package's build tree. The
 shlibs file in that build tree takes precedence over shlibs files from
 other binary packages.
-.IP \fIadmindir\fR/info/\fIpackage\fR.shlibs
+.IP File returned by dpkg-query --control-path \fIpackage\fR shlibs
 Package-provided shared library dependency information.
-Unless overridden, \fIadmindir\fR is /var/lib/dpkg.
+Unless overridden by --admindir, those files are located in /var/lib/dpkg.
 .IP /etc/dpkg/shlibs.default
 Per-system default shared library dependency information.
 .P
