@@ -58,6 +58,8 @@ dpkg (1.16.0) UNRELEASED; urgency=low
     instead of -O2 when building ppc64 packages on Ubuntu. Closes: #612472
   * Add new function get_control_path() to Dpkg::Path, it wraps dpkg-query
     --control-path.
+  * Update dpkg-shlibdeps to be multiarch-ready:
+    - use get_control_path() to find symbols/shlibs files
 
   [ Jonathan Nieder ]
   * Remove support for use of synchronous sync(2), due to its pernicious
